# silent-admin-backend

./: .gitmodules  Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/admin/: mod.rs
src/api/admin/auth/: admin_log.rs  mod.rs
src/api/admin/dashboard/: index.rs
src/api/admin/index/: index.rs  login.rs  mod.rs
src/api/admin/routine/: mod.rs
src/api/admin/routine/admin_info/: index.rs
src/api/auth/: buttons.rs  login.rs  mod.rs
src/api/index/: index.rs  mod.rs
src/api/menu/: list.rs  mod.rs
src/common/: exception_handler.rs  mod.rs  response_wrapper.rs
src/common/middlewares/: mod.rs  response_wrapper.rs  response_wrapper_middleware.rs
src/models/: user.rs
