[package]
name = "silent-admin-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
serde = { version = "1.0.197", features = ["derive"] }
silent = "1"
silent-db = { version = "0", features = ["mysql"] }
