[package]
name = "silent-admin-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
bytes = { version = "1.6.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
silent = "1"
silent-db = { version = "0", features = ["mysql"] }
once_cell = "1.19.0"
time = { version = "0.3.34", features = ["local-offset"] }
